@@ -9,6 +9,8 @@ Version 1.0
   internal server error on weird paths when loading via pkg_resources.
 - fixed an URL generation bug that caused URLs to be invalid if a
   generated component contains a colon.
+- :func:`werkzeug.import_string` now works with partially set up
+  packages properly.
 
 Version 0.6.2
 -------------
